--- a/index.htm
+++ b/index.htm
@@ -8,15 +8,31 @@
     <title>Travel</title>
 </head>
 <body>
+
+    <!--NAVBAR STARTED-->
+    <nav class="navbar">
+        <h1 class="logo">JOURNEY</h1>
+        <ul class="navlinks">
+            <li class="active"><a href="#"></a>HOME</li>
+            <li><a href="#"></a>TOUR</li>
+            <li><a href="#"></a>EXPLORE</li>
+            <li><a href="#"></a>ABOUT</li>
+            <li class="abc "><a href="#"></a>CONTACT US</li>
+        </ul>
+    </nav>
+    
+    <!--NAVBAR STARTED-->
+
+    <!--HEADER SECTION STARTED -->
     <header>
         <div class="header-content">
-            <div class="opacity"></div>
             <h2>Explore The World</h2>
             <div class="line"> </div>
-            <h2>A WONDURFUL GIFT</h2>
+            <h1>A WONDURFUL GIFT</h1>
             <a class="ctn"href="#">Explore More</a>
            
         </div>
     </header>
+      <!--HEADER SECTION ENDED -->
 </body>
 </html>
